# sTUI_Timer

./: .gitignore  Cargo.toml  README.md  TODO.md
.devcontainer/: devcontainer.json
DOCS/: DOCS.md  MODULES.md  TODO.md
src/: lib.rs  main.rs
src/lib/: io.rs  mod.rs
src/logic/: io.rs  mod.rs
src/types/: mod.rs  time_log.rs
src/util/: io.rs  mod.rs  secs_to_time_log.rs  timer.rs  types.rs
src/util/io/: event.rs  mod.rs
src/util/io/ui/: app.rs  layout.rs  mod.rs
src/util/io/ui/bits/: mod.rs
src/util/io/ui/components/: timer.rs
src/util/io/ui/styles/: mod.rs
src/util/timer/: mod.rs
src/util/types/: event_reader.rs  mod.rs  time_log.rs
tests/: event.rs  io.rs  ui.rs
