[package]
name = "stui_timer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = { version = "0.30.0", features = ["crossterm"] }
ratatui-core = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tui-big-text = "0.8.1"

[dev-dependencies]
insta = "1.46.1"
